fix(provision): AZBlob provisioner honors `folderName` (#253)
fix(provision): Azblob provisioner honors folder name